--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         .hero {
             text-align: center;
             padding: 100px 20px;
-            background-image: url('images/nana.avif'); /* Utilisation de background-image */
+            background-image: url('images/NANA.avif'); /* Utilisation de background-image */
             color: #fff;
             border-radius: 20px;
             box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
@@ -167,7 +167,7 @@
 
         .services {
             border-radius: 20px;
-            background-image: url('images/nono.avif');
+            background-image: url('images/NONO.avif');
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -232,7 +232,7 @@
             border-radius: 20px;
             padding: 60px 20px;
             text-align: center;
-            background-image: url('images/nene.avif'); /* Remplacez par le chemin de votre image */
+            background-image: url('images/NENE.avif'); /* Remplacez par le chemin de votre image */
             background-size: cover; /* Pour que l'image couvre toute la section */
             background-repeat: no-repeat; /* Pour éviter la répétition de l'image */
             background-position: center; /* Pour centrer l'image */
