--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         .hero, .about {
             text-align: center;
             padding: 100px 20px;
-            background-image: url('images/nana.avif');
+            background-image: url('images/NANA.avif');
             color: #fff;
             border-radius: 20px;
             box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
