--- a/index.html
+++ b/index.html
@@ -74,11 +74,24 @@
             margin-right: 10px;
         }
 
-        .hero, .about {
+        .hero {
             text-align: center;
             padding: 100px 20px;
             background-image: url('images/NANA.avif');
             color: #fff;
+            border-radius: 20px;
+            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 60px;
+            margin-bottom: 60px;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+        .about {
+            text-align: center;
+            padding: 100px 20px;
+            background-image: url('images/NANA.avif');
+            color: BLACK;
             border-radius: 20px;
             box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
             margin-top: 60px;
@@ -181,7 +194,7 @@
             border-radius: 20px;
         }
 
-        .services h2 {
+        .services h2, .about h2{
             color: white;
         }
 
@@ -248,7 +261,7 @@
             border-radius: 20px;
             padding: 60px 20px;
             text-align: center;
-            background-image: url('images/nene.avif');
+            background-image: url('images/NENE.avif');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
