--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <header>
       <div class="logo">
-        <img src="/images/RN1.png" alt="Logo NR WEB">
+        <img src="images/RN1.png" alt="Logo NR WEB">
       </div>
       <i class="fas fa-bars burger-menu-icon" onclick="toggleMenu()"></i>
       <nav>
